Fix deprecated Locale constructor in TechFormat
Replace new Locale("en", "US") with Locale.of("en", "US")
to use the modern API available since Java 19.

The Locale(String, String) constructor was deprecated in Java 19
and marked for removal. Locale.of() is the recommended replacement
that returns cached Locale instances for better performance.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>